--- a/src/app/components/projects/add-project/add-project.component.css
+++ b/src/app/components/projects/add-project/add-project.component.css
@@ -20,7 +20,7 @@ h3 {
 
 .add-form input, .add-form select {
   display: inline-block;
-  width: 800px;
+  width: 500px;
   margin: 10px;
   border: 1px solid #d1d3e0;
   border-radius: 2px;
@@ -38,6 +38,7 @@ h3 {
   vertical-align:top;
   display: inline-block;
   width: 800px;
+  height: 200px;
   margin: 10px;
   border: 1px solid #d1d3e0;
   border-radius: 2px;
