Ajout d'une wiki avec piece jointe : Terminé / Projets : configuration : Terminé

--- a/src/app/components/administration/admin-users/edit-user/edit-user.component.html
+++ b/src/app/components/administration/admin-users/edit-user/edit-user.component.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div nz-col [nzSpan]="17" class="search-area">
-                <button>Créer</button>
+                <button>Editer</button>
             </div>
         </form>
     </div>
