--- a/src/app/components/configuration/configuration.component.html
+++ b/src/app/components/configuration/configuration.component.html
@@ -6,7 +6,7 @@
           </nz-tab>
 
           <nz-tab nzTitle="Wiki">
-            <app-wiki-config></app-wiki-config>
+            <app-wiki-config [project]="project"></app-wiki-config>
           </nz-tab>
 
           <nz-tab nzTitle="Membres">
