--- a/src/app/components/configuration/wiki-config/edit-wiki/edit-wiki.component.html
+++ b/src/app/components/configuration/wiki-config/edit-wiki/edit-wiki.component.html
@@ -1,5 +1,5 @@
 <div>
-    <form nz-form class="ant-advanced-search-form" [formGroup]="addWiki" (ngSubmit)="onSubmit()">
+    <form nz-form class="ant-advanced-search-form" [formGroup]="editWiki" (ngSubmit)="onSubmit()">
         <div nz-row [nzGutter]="24">
             <div nz-col [nzSpan]="10">
                 <nz-form-item>
@@ -20,17 +20,8 @@
                 </nz-form-item>
             </div>
         </div>
-
-        <div nz-row>
-            <nz-form-item>
-                <nz-form-label>Fichiers</nz-form-label>
-                <nz-form-control>
-                    <input type="file" formControlName="reference" (change)="uploadFile($event)"/>
-                </nz-form-control>
-            </nz-form-item>
-        </div>
             
-        <button nz-button nzType="primary">Créer</button>
+        <button nz-button nzType="primary">Editer</button>
 
     </form>
 </div>
