--- a/src/app/components/projects/show-project/wiki/add-wiki/add-wiki.component.css
+++ b/src/app/components/projects/show-project/wiki/add-wiki/add-wiki.component.css
@@ -1,48 +1,39 @@
-form label {
-    display: inline-block;
-    width: 60px;
-    padding-bottom: 15px;
-    margin: 10px;
-}
-
-form input {
-    width: 20%;
-    margin: 10px;
-    border: 1px solid #d1d3e0;
-    border-radius: 2px;
-    color: #3e425a;
-}
-
-form input:focus {
-    outline: none !important;
-    border-color: rgba(0,0,128,0.5);
-    box-shadow: 0 0 5px rgba(0,0,128,0.3);
-}
-
-form .content textarea {
+h3 {
+    font-weight: bold;
+    font-size: 18px;
+  }
+  form {
     width: 100%;
-    height: 400px;
-    border: 1px solid #d1d3e0;
-    border-radius: 2px;
-    color: #3e425a;
-}
-
-form .content textarea:focus {
-    outline: none !important;
-    border-color: rgba(0,0,128,0.5);
-    box-shadow: 0 0 5px rgba(0,0,128,0.3);
-}
-
-form .submit-btn {
+    height: 100%;
+    align-items: center;
+    
+  }
+  
+  form .submit-btn button {
+    float: right;
+  }
+  
+  .ant-advanced-search-form {
+    padding: 24px;
+    background: #fbfbfb;
+    border: 1px solid #d9d9d9;
+    border-radius: 6px;
+  }
+  
+  [nz-form-label] {
+    overflow: visible;
+  }
+  
+  button {
+    padding-left: 6px;
+    padding-right: 6px;
     width: 60px;
     border-radius: 3px;
     font-size: 14px;
     border-color: transparent;
     background-color: #0065ff;
     color: #fff;
-    
-}
-
-form .submit-btn:hover {
-    background-color: #0065e0;
-}
+  }
+  .search-area {
+    text-align: right;
+  }
