--- a/src/app/components/projects/show-project/wiki/wiki.component.html
+++ b/src/app/components/projects/show-project/wiki/wiki.component.html
@@ -1,20 +1,14 @@
 <div class="wiki">
     <div class="operations">
         <a [routerLink]="'/add_wiki/'+project?.id"><i nz-icon nzType="plus" nzTheme="outline"></i>Nouvelle page wiki</a>
-        <a [routerLink]=""><i nz-icon nzType="edit" nzTheme="outline"></i>Modifier</a>
-        <a [routerLink]=""><i nz-icon nzType="lock" nzTheme="outline"></i>Verrouiller</a>
-        <a [routerLink]=""><i nz-icon nzType="delete" nzTheme="outline"></i>Supprimer</a>
-        <a [routerLink]=""><i nz-icon nzType="history" nzTheme="outline"></i>Historique</a>
     </div><br><br><br>
-    <nz-list nzItemLayout="horizontal" *ngFor="let wiki of project?.wikis | paginate : {
-        itemsPerPage: tableSize,
-        currentPage: page,
-        totlaItems: count };" >
+    <nz-list nzItemLayout="horizontal" *ngFor="let wiki of project?.wikis">
         <nz-list-item>
             <nz-list-item-meta>
                 <nz-list-item-meta-title>
                     <h1>
-                        {{ wiki?.title }} <a [routerLink]="" class="icon"><i nz-icon nzType="edit" nzTheme="outline"></i></a>
+                        {{ wiki?.title }} 
+                        
                     </h1>
                     <div class="description" [style.height.%]="height">
                         <p [innerHTML] ="wiki?.content">
@@ -27,7 +21,3 @@
         </nz-list-item>
     </nz-list>
 </div>
-
-<!--
-    
--->
