Details categorie : fini, details article : manque de la rubrique Fichiers

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -142,3 +142,7 @@ border-color: transparent;
 .login-form-button:hover {
 background-color:   #0065e0;
 }
+
+.overflow-ng-content {
+overflow: overlay;
+}
