--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -110,11 +110,12 @@
         </div>
       </nz-header>
       <nz-content>
-        <div class="inner-content">
+        <div class="inner-content overflow-ng-content">
   
           <router-outlet></router-outlet>
         </div>
       </nz-content>
+    
     </nz-layout>
   
     
