--- a/src/app/components/administration/admin-roles/admin-roles.component.css
+++ b/src/app/components/administration/admin-roles/admin-roles.component.css
@@ -63,6 +63,14 @@ table tr td a {
   border: 1px solid #e3e5ed;
   border-width: 0;
   float: right;
+  
+}
+
+table tr td a:first-child {
+  padding: 8px;
+  border: 1px solid #e3e5ed;
+  border-width: 0;
+  float: right;
   color: #CF1A0E;
 }
 
