--- a/src/app/components/articles/add-article/add-article.component.html
+++ b/src/app/components/articles/add-article/add-article.component.html
@@ -9,9 +9,9 @@
             <div nz-row [nzGutter]="24">
               <div nz-col [nzSpan]="12">
                 <nz-form-item>
-                  <nz-form-label>Catégorie</nz-form-label>
+                  <nz-form-label [nzSpan]="5">Catégorie</nz-form-label>
                   <nz-form-control>
-                    <nz-select formControlName="category">
+                    <nz-select formControlName="category_id">
                         <nz-option *ngFor="let category of categories" [nzValue]="category.id" [nzLabel]="category.title"></nz-option>
                     </nz-select>
                   </nz-form-control>
@@ -19,7 +19,7 @@
               </div>
               <div nz-col [nzSpan]="12">
                 <nz-form-item>
-                    <nz-form-label>Titre</nz-form-label>
+                    <nz-form-label [nzSpan]="5">Titre</nz-form-label>
                     <nz-form-control>
                       <input nz-input formControlName="title"/>
                     </nz-form-control>
@@ -30,20 +30,20 @@
             <div nz-row [nzGutter]="24">
                 <div nz-col [nzSpan]="12">
                     <nz-form-item>
-                        <nz-form-label>Résumé</nz-form-label>
+                        <nz-form-label [nzSpan]="5">Résumé</nz-form-label>
                         <nz-form-control>
                           <nz-textarea-count [nzMaxCharacterCount]="100">
-                            <textarea rows="2" nz-input name="summary" formControlName=""></textarea>
+                            <textarea rows="2" nz-input formControlName="summary"></textarea>
                           </nz-textarea-count>
                         </nz-form-control>
                     </nz-form-item>
                 </div>
                 <div nz-col [nzSpan]="12">
                     <nz-form-item>
-                        <nz-form-label>Description</nz-form-label>
+                        <nz-form-label [nzSpan]="5">Description</nz-form-label>
                         <nz-form-control>
                           <nz-textarea-count [nzMaxCharacterCount]="100">
-                            <textarea rows="2" nz-input formControlName=""></textarea>
+                            <textarea rows="2" nz-input formControlName="description"></textarea>
                           </nz-textarea-count>
                         </nz-form-control>
                     </nz-form-item>
@@ -53,17 +53,17 @@
             <div nz-row [nzGutter]="24">
                 <div nz-col [nzSpan]="12">
                   <nz-form-item>
-                    <nz-form-label>Environnement</nz-form-label>
+                    <nz-form-label [nzSpan]="5">Environnement</nz-form-label>
                     <nz-form-control>
-                        <input nz-input formControlName=""/>
+                        <input nz-input formControlName="environment"/>
                     </nz-form-control>
                   </nz-form-item>
                 </div>
                 <div nz-col [nzSpan]="12">
                   <nz-form-item>
-                      <nz-form-label>Message d'erreur</nz-form-label>
+                      <nz-form-label [nzSpan]="5">Message d'erreur</nz-form-label>
                       <nz-form-control>
-                        <input nz-input formControlName=""/>
+                        <input nz-input formControlName="error_message"/>
                       </nz-form-control>
                     </nz-form-item>
                 </div>
@@ -72,17 +72,17 @@
             <div nz-row [nzGutter]="24">
                 <div nz-col [nzSpan]="12">
                   <nz-form-item>
-                    <nz-form-label>Numéro de ticket</nz-form-label>
+                    <nz-form-label [nzSpan]="5">Numéro de ticket</nz-form-label>
                     <nz-form-control>
-                        <input nz-input formControlName=""/>
+                        <input nz-input formControlName="ticket_number"/>
                     </nz-form-control>
                   </nz-form-item>
                 </div>
                 <div nz-col [nzSpan]="12">
                   <nz-form-item>
-                      <nz-form-label>Cause</nz-form-label>
+                      <nz-form-label [nzSpan]="5">Cause</nz-form-label>
                       <nz-form-control>
-                        <input nz-input formControlName=""/>
+                        <input nz-input formControlName="cause"/>
                       </nz-form-control>
                     </nz-form-item>
                 </div>
@@ -93,8 +93,8 @@
                     <nz-form-item>
                         <nz-form-label>Résolution</nz-form-label>
                         <nz-form-control>
-                            <textarea rows="4" nz-input class="resolution" formControlName=""></textarea>
-                        </nz-form-control>
+                          <ckeditor formControlName="resolution"></ckeditor>
+                      </nz-form-control>
                     </nz-form-item>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                   <nz-form-item>
                     <nz-form-label>Mots clé</nz-form-label>
                     <nz-form-control>
-                        <input nz-input formControlName=""/>
+                        <input nz-input formControlName="keywords"/>
                     </nz-form-control>
                   </nz-form-item>
                 </div>
@@ -120,11 +120,11 @@
             <div nz-row [nzGutter]="24"> 
               <div nz-col [nzSpan]="12">
                 <nz-form-item>
-                  <nz-form-label>Fichier</nz-form-label>
+                  <nz-form-label>Fichiers</nz-form-label>
                   <nz-form-control>
-                    <button>Parcourir...</button>
+                      <input type="file" formControlName="reference" (change)="uploadFile($event)"/>
                   </nz-form-control>
-                </nz-form-item>
+              </nz-form-item>
               </div>
               <div nz-col [nzSpan]="12" class="search-area">
                 <button>Créer</button>
