--- a/src/app/components/articles/articles.component.css
+++ b/src/app/components/articles/articles.component.css
@@ -1,11 +1,8 @@
 .summary-filter {
-
-    
     padding-bottom: 18px;
 }
 .summary-filter .summary {
     float: left;
-    margin-bottom: 20px;
     padding: 15px 15px;
     border: 1px solid #dadce7;
     border-radius: 3px;
@@ -14,30 +11,28 @@
     word-wrap: break-word;
 }
 .filter-btn {
-    position: relative;
     display: flex;
+    flex-wrap: wrap;
+    align-content: space-between;
     float: right;
     padding-bottom: 18px;
 }
 
 
-.filter-btn .filter {
-    margin: 5px;
-    float: right;
+.filter-btn .filter nz-select {
+    width: 180px;
 }
 
-.filter-btn .filter select {
-    width: 200px;
-}
 
 .filter-btn .btn a {
     
     border-radius: 3px;
-    font-size: 13px;
+    font-size: 14px;
     border-color: transparent;
     background-color: #f0f2f5 ;
     color: #212136;
-    padding: 6px 8px 6px 8px;
+    padding: 8px 10px 8px 10px;
+    float: right;
     margin: 5px;
 }
 
@@ -49,18 +44,24 @@
     background-color:  #E8E8E8;
 }
 
+.list {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 .articles-list {
     float: left;
     width: 75%;
 }
 
-.articles-list .article a {
+nz-list a {
     position: relative;
     color:  #0039a6;
     font-size: 16px;
 }
 
-.articles-list .article a:hover {
+nz-list a:hover {
     color: #0065ff;
     text-decoration: underline;
 }
