--- a/src/app/components/articles/articles.component.html
+++ b/src/app/components/articles/articles.component.html
@@ -5,28 +5,30 @@
             <ul>
                 <li>Nombre total des catégories : {{ categories?.length }}</li>
                 <li>Nombre total des articles : {{ articles?.length }}</li>
-                <li>Articles écrits par moi :</li>
             </ul>
         </div>
         <div class="filter-btn">
             
             <div class="filter">
-                Aller à la catégorie :
-                <select type="text" name="" id="">
-                    <option value=""></option>
-                    <option *ngFor="let category of categories" (change)="onSelect(category)" value="{{ category.id }}">
-                        {{ category.title }}
-                    </option>
-                </select>
+                <nz-form-item>
+                    <nz-form-label [nzSpan]="10">Aller à la catégorie</nz-form-label>
+                     <nz-form-control>
+                        <nz-select  [(ngModel)]="selectedCategory" (ngModelChange)="onSelect()">
+                            <nz-option *ngFor="let category of categories" [nzValue]="category.id" [nzLabel]="category.title"></nz-option>
+                        </nz-select>
+                    </nz-form-control>
+                </nz-form-item>
             </div>
             <div class="btn">
                 <a [routerLink]="'/add_article'"><i nz-icon nzType="plus" nzTheme="outline"></i>Créer un article</a>
-                <a [routerLink]="'/add_category'"><i nz-icon nzType="plus" nzTheme="outline"></i>Créer une catégorie</a>
+                 <a [routerLink]="'/add_category/'+project?.id"><i nz-icon nzType="plus" nzTheme="outline"></i>Créer une catégorie</a>
             </div>
         </div>
     </div>
-    <div class="list">
-        <div class="articles-list">
+    <br><br><br><br><br><br>
+    
+    <div nz-row>
+        <div nz-col nzSpan="12">
             <nz-list nzItemLayout="horizontal" *ngFor="let category of project?.categories">
                 <div *ngFor="let article of category.articles">
                     <nz-list-item>
@@ -37,7 +39,7 @@
                                     {{ article.title }}
                                 </a>
                             </nz-list-item-meta-title>
-            
+                
                             <nz-list-item-meta-description class="description">
                                 <p>
                                     {{ article.description | slice:0:60 }}...
@@ -48,19 +50,11 @@
                             </nz-list-item-meta-description>
                     </nz-list-item-meta>
                     </nz-list-item>
-        
                 </div>
             </nz-list>
         </div>
-        <div class="categories-list">
-            <nz-list nzBordered nzSize="small">
-                <nz-list-header>
-                    Parcourir par catégorie
-                </nz-list-header>
-                <nz-list-item *ngFor="let category of categories">
-                    <a [routerLink]="'/show_category/'+category.id">{{ category.title }}</a>
-                </nz-list-item>
-              </nz-list>
-        </div>
+       
     </div>
+       
+
 </div>
