--- a/src/app/components/articles/show-article/history/history.component.html
+++ b/src/app/components/articles/show-article/history/history.component.html
@@ -16,7 +16,7 @@
                     {{ article?.updated_at | date:'dd/MM/yyyy HH:MM:SS' }}
                 </td>
                 <td>
-                    ilham
+                    {{ article?.author }}
                 </td>
             </tr>
         </tbody>
